Bug 141258 - LibreOffice Writer freeze when you try use a spellchecking in RU GUI
Summary: LibreOffice Writer freeze when you try use a spellchecking in RU GUI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.1.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-26 03:45 UTC by Daniil
Modified: 2021-04-01 14:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screen 1 (35.72 KB, image/png)
2021-03-31 16:49 UTC, Daniil
Details
screen 2 (180.03 KB, image/png)
2021-03-31 16:50 UTC, Daniil
Details
A testcase for tdf#141258 (8.38 KB, application/vnd.oasis.opendocument.text)
2021-03-31 16:55 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniil 2021-03-26 03:45:07 UTC
Description:
When I click spellchecking and there is repeating words in text, Writer is frize. 

Steps to Reproduce:
1. Click spellchecking 
2. In text must be repeating words
3. Spellchecking find repeating words and program frize 

Actual Results:
program frize 

Expected Results:
don't frize :)


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: ru
Module: TextDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: yes
Comment 1 Roman Kuznetsov 2021-03-26 19:57:05 UTC
Interesting, looks like a bug 141027.

Mike, what do you think?
Comment 2 Mike Kaganski 2021-03-26 21:42:15 UTC
(In reply to Roman Kuznetsov from comment #1)
> Interesting, looks like a bug 141027.

Agree.

> Mike, what do you think?

I think that Daniil may check using 7.1.2.1 available on downloads in testing section.
Comment 3 Daniil 2021-03-31 16:49:24 UTC
Created attachment 170874 [details]
screen 1
Comment 4 Daniil 2021-03-31 16:50:15 UTC
(In reply to Mike Kaganski from comment #2)
> (In reply to Roman Kuznetsov from comment #1)
> > Interesting, looks like a bug 141027.
> 
> Agree.
> 
> > Mike, what do you think?
> 
> I think that Daniil may check using 7.1.2.1 available on downloads in
> testing section.

I download 7.1.2.2, but the problem is still remains (screenshot 1). But when another window is open, it does not frozen, it is very laggy, but i can shuffle the windows or close them (screenshot 2). Also during the freeze it loads the processor very much, from 0% to 23-25%.
Comment 5 Daniil 2021-03-31 16:50:40 UTC
Created attachment 170875 [details]
screen 2
Comment 6 Mike Kaganski 2021-03-31 16:54:55 UTC
Repro using Version: 7.1.2.2 (x64) / LibreOffice Community
Build ID: 8a45595d069ef5570103caea1b71cc9d82b2aae4
CPU threads: 12; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL

Caolan, could you please take a look?
Comment 7 Mike Kaganski 2021-03-31 16:55:34 UTC
Created attachment 170876 [details]
A testcase for tdf#141258
Comment 8 Caolán McNamara 2021-04-01 09:23:19 UTC
looks like VclScrolledWindow::doSetAllocation first decides the vertical scrollbar should be hidden, then it should be shown triggering another round of layout which then does the same thing
Comment 9 Caolán McNamara 2021-04-01 09:37:11 UTC
https://gerrit.libreoffice.org/c/core/+/113447
Comment 10 Commit Notification 2021-04-01 11:39:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e8d93ae128f7947e64eb8c849b4af9c54c9dd7a5

Resolves: tdf#141258 turn scrollbars on/off once per layout loop

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2021-04-01 11:45:51 UTC
that seems to do the right thing, done in main, backport to 7-1 in gerrit
Comment 12 Commit Notification 2021-04-01 14:31:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/bcfcc787168e7b9ffd577285694ef0e57dbeb8fa

Resolves: tdf#141258 turn scrollbars on/off once per layout loop

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.