Resolves: tdf#141258 turn scrollbars on/off once per layout loop

in this scenario the vertical scrollbar is turned off, then turned on
back to its original state but the off/on triggers another layout
loop later which does the same thing. Turn on/off just once per loop
so only one state change can occur so new layout is only triggered
if the state really changes.

Change-Id: I5736264a74723a15034e5fb467262dca6c0f283c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113447
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>